<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_trackposition"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/menu_trackposition"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_mylocation"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/menu_mylocation"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_keepmapcentered"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/menu_keepmapcentered"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_map_zoom"
        android:orderInCategory="100"
        android:title="@string/menu_map_zoom"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_map_zoom_in"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_in"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_map_zoom_out"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_out"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_map_zoom_fittrack"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_fittrack"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_map_zoom_10"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_10"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_map_zoom_15"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_15"
                app:showAsAction="never" />
            <item
                android:id="@+id/menu_map_zoom_20"
                android:orderInCategory="100"
                android:title="@string/menu_map_zoom_20"
                app:showAsAction="never" />
        </menu>
    </item>


    <item
        android:id="@+id/menu_map_type"
        android:orderInCategory="100"
        android:title="@string/menu_map_type"
        app:showAsAction="never"></item>


</menu>